Implement Peters suggestions

--- a/docs/examples/wflow.ipynb
+++ b/docs/examples/wflow.ipynb
@@ -156,16 +156,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d65cb216-af74-4f24-ae52-3be3301fe674",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eWaterCycle Wflow\n",
+      "-------------------\n",
+      "Version = 2020.1.1\n",
+      "Parameter set = \n",
+      "  Parameter set\n",
+      "  -------------\n",
+      "  name=wflow_rhine_sbm_nc\n",
+      "  directory=/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc\n",
+      "  config=/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc/wflow_sbm_NC.ini\n",
+      "  doi=N/A\n",
+      "  target_model=wflow\n",
+      "  supported_model_versions={'2020.1.1'}\n",
+      "Forcing = \n",
+      "  Forcing data for Wflow\n",
+      "  ----------------------\n",
+      "  Directory: /home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc\n",
+      "  Start time: 1991-01-01T00:00:00Z\n",
+      "  End time: 1991-12-31T00:00:00Z\n",
+      "  Shapefile: None\n",
+      "  Additional information for model config:\n",
+      "    - netcdfinput: inmaps.nc\n",
+      "    - Precipitation: /P\n",
+      "    - Temperature: /TEMP\n",
+      "    - EvapoTranspiration: /PET\n",
+      "    - Inflow: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fc93599b-34f0-45db-82da-1a95b32d6301",
    "metadata": {},
    "source": [
-    "The pre-configured parameters are show below and can be overwritten with `setup()`"
+    "The pre-configured parameters are shown below and can be overwritten with `setup()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d3aaa50a",
    "metadata": {},
    "outputs": [
@@ -175,7 +217,7 @@
        "[('start_time', '1991-01-01T00:00:00Z'), ('end_time', '1991-12-31T00:00:00Z')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,19 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7eb7c504",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "cfg_file, cfg_dir = model.setup(end_time = \"1991-02-28T00:00:00Z\")"
+    "cfg_file, cfg_dir = model.setup(end_time=\"1991-02-28T00:00:00Z\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "7fc12d14",
    "metadata": {},
    "outputs": [
@@ -206,8 +248,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210712_144544/wflow_ewatercycle.ini\n",
-      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210712_144544\n"
+      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210714_073455/wflow_ewatercycle.ini\n",
+      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210714_073455\n"
      ]
     }
    ],
@@ -217,8 +259,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "00144d17-178e-48e0-9675-35c9b510cc11",
+   "metadata": {},
+   "source": [
+    "The config file can be edited, but for now we will initialize the model with the config file as is"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ae2d9d7f",
    "metadata": {},
    "outputs": [],
@@ -236,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "43d6068a",
    "metadata": {},
    "outputs": [
@@ -324,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2562be8f-91dc-4ab1-a591-eb8705882492",
    "metadata": {},
    "outputs": [
@@ -695,13 +745,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1991-02-28 00:00:00\n",
        "Attributes:\n",
-       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8b191f54-dafa-449d-aa9f-d48d6000f8b6' class='xr-array-in' type='checkbox' checked><label for='section-8b191f54-dafa-449d-aa9f-d48d6000f8b6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2507ea47-d47d-4446-9845-28de691b1bd2' class='xr-array-in' type='checkbox' checked><label for='section-2507ea47-d47d-4446-9845-28de691b1bd2' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-7b7808ad-e350-4437-8527-901af3f2348e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7b7808ad-e350-4437-8527-901af3f2348e' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-58c36987-174f-433a-941d-28491629599b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-58c36987-174f-433a-941d-28491629599b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1b9e6001-97b7-4207-aad0-ea2e4e68b6e3' class='xr-var-data-in' type='checkbox'><label for='data-1b9e6001-97b7-4207-aad0-ea2e4e68b6e3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-7eec07ca-fea8-4e20-9925-5387b3bf50b4' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7eec07ca-fea8-4e20-9925-5387b3bf50b4' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-1eede325-39df-4357-8f36-cb96de8b29d9' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1eede325-39df-4357-8f36-cb96de8b29d9' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-462d9747-5b50-41d6-9f16-b88be7dd2f16' class='xr-var-data-in' type='checkbox'><label for='data-462d9747-5b50-41d6-9f16-b88be7dd2f16' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -732,7 +782,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-708443fd-cf57-4b20-8417-186d68fef5e3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-708443fd-cf57-4b20-8417-186d68fef5e3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f10aa212-e055-489c-80cc-9645cfa31fe0' class='xr-var-data-in' type='checkbox'><label for='data-f10aa212-e055-489c-80cc-9645cfa31fe0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-8ddcdff9-b795-42bc-b6c8-bbfff7473b89' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8ddcdff9-b795-42bc-b6c8-bbfff7473b89' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-02cd53b2-3295-4f5d-b7f5-5b8714cd7af3' class='xr-var-data-in' type='checkbox'><label for='data-02cd53b2-3295-4f5d-b7f5-5b8714cd7af3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -760,7 +810,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1991-02-28 00:00:00</div><input id='attrs-10a325a1-7777-4893-bced-75b8b5a67db7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-10a325a1-7777-4893-bced-75b8b5a67db7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c804ffb3-2be0-4720-a129-622572c77183' class='xr-var-data-in' type='checkbox'><label for='data-c804ffb3-2be0-4720-a129-622572c77183' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1991, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-02a9c684-44d9-4dc6-b718-ceabd6047edc' class='xr-section-summary-in' type='checkbox'  checked><label for='section-02a9c684-44d9-4dc6-b718-ceabd6047edc' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1991-02-28 00:00:00</div><input id='attrs-5ca57799-123a-4240-9a80-a0e76556d1f4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5ca57799-123a-4240-9a80-a0e76556d1f4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3359d5b1-b245-4141-81b4-3f29500cd399' class='xr-var-data-in' type='checkbox'><label for='data-3359d5b1-b245-4141-81b4-3f29500cd399' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1991, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-eb4ccb62-0766-4818-bdb8-10e690da5027' class='xr-section-summary-in' type='checkbox'  checked><label for='section-eb4ccb62-0766-4818-bdb8-10e690da5027' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -779,7 +829,7 @@
        "    units:     m/s"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,17 +841,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
+   "id": "c7d346fe-aa0b-4f1b-b42f-88b5df897de7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
+      "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+      "       [0., 0., 0., ..., 0., 0., 0.],\n",
+      "       [0., 0., 0., ..., 0., 0., 0.],\n",
+      "       ...,\n",
+      "       [0., 0., 0., ..., 0., 0., 0.],\n",
+      "       [0., 0., 0., ..., 0., 0., 0.],\n",
+      "       [0., 0., 0., ..., 0., 0., 0.]])\n",
+      "Coordinates:\n",
+      "  * longitude  (longitude) float64 5.227 5.264 5.3 5.337 ... 11.97 12.01 12.05\n",
+      "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
+      "    time       object 1991-02-28 00:00:00\n",
+      "Attributes:\n",
+      "    units:     m/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(da)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "0ab4b6d8-0443-40c9-b8cd-620e334862c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f64598ff0a0>"
+       "<matplotlib.collections.PathCollection at 0x7fae85f616d0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -858,6 +939,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "956f9e00-7a3b-440f-a286-33e167898a12",
+   "metadata": {},
+   "source": [
+    "We are done with the model so let's clean it up."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "ce111800",
@@ -866,14 +955,6 @@
    "source": [
     "model.finalize()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1a3f27d-86b0-40aa-8394-1c6172c5f80e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
