Implement Sarah's suggestions and more polishing

--- a/docs/examples/pcrglobwb.ipynb
+++ b/docs/examples/pcrglobwb.ipynb
@@ -33,7 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ewatercycle\n",
     "import ewatercycle.models\n",
     "import ewatercycle.forcing\n",
     "import ewatercycle.parameter_sets\n",
@@ -127,31 +126,15 @@
    "execution_count": 5,
    "id": "9c6c875d-3cf5-4530-b6ef-fd707b52ad8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parameter set\n",
-      "-------------\n",
-      "name=custom_parameter_set\n",
-      "directory=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\n",
-      "config=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\n",
-      "doi=N/A\n",
-      "target_model=pcrglobwb\n",
-      "supported_model_versions={'setters'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "custom_parameter_set = parameter_set = ewatercycle.parameter_sets.ParameterSet(\n",
+    "custom_parameter_set = ewatercycle.parameter_sets.ParameterSet(\n",
     "    name=\"custom_parameter_set\",\n",
     "    directory=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\",\n",
     "    config=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\",\n",
     "    target_model=\"pcrglobwb\",\n",
     "    supported_model_versions={'setters'}\n",
-    ")\n",
-    "print(custom_parameter_set)"
+    ")"
    ]
   },
   {
@@ -176,7 +159,7 @@
      "text": [
       "Forcing data for PCRGlobWB\n",
       "--------------------------\n",
-      "Directory: /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case/forcing\n",
+      "Directory: /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/forcing\n",
       "Start time: 2001-01-01T00:00:00Z\n",
       "End time: 2010-12-31T00:00:00Z\n",
       "Shapefile: None\n",
@@ -191,7 +174,7 @@
     "    target_model = \"pcrglobwb\",\n",
     "    start_time = \"2001-01-01T00:00:00Z\",\n",
     "    end_time = \"2010-12-31T00:00:00Z\",\n",
-    "    directory = \"./parameter-sets/pcrglobwb_example_case/forcing\",\n",
+    "    directory = \"./parameter-sets/pcrglobwb_rhinemeuse_30min/forcing\",\n",
     "    shape = None,  # if available, it can be used e.g. for plotting\n",
     "    forcing_info = dict( \n",
     "        # model-specific options\n",
@@ -237,9 +220,39 @@
    "execution_count": 8,
    "id": "12ade41f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eWaterCycle PCRGlobWB\n",
+      "-------------------\n",
+      "Version = setters\n",
+      "Parameter set = \n",
+      "  Parameter set\n",
+      "  -------------\n",
+      "  name=pcrglobwb_rhinemeuse_30min\n",
+      "  directory=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\n",
+      "  config=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\n",
+      "  doi=N/A\n",
+      "  target_model=pcrglobwb\n",
+      "  supported_model_versions={'setters'}\n",
+      "Forcing = \n",
+      "  Forcing data for PCRGlobWB\n",
+      "  --------------------------\n",
+      "  Directory: /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/forcing\n",
+      "  Start time: 2001-01-01T00:00:00Z\n",
+      "  End time: 2010-12-31T00:00:00Z\n",
+      "  Shapefile: None\n",
+      "  Additional information for model config:\n",
+      "    - temperatureNC: temperature_2001to2010.nc\n",
+      "    - precipitationNC: precipitation_2001to2010.nc\n"
+     ]
+    }
+   ],
    "source": [
-    "pcrglob = ewatercycle.models.PCRGlobWB(version=\"setters\", parameter_set=parameter_set, forcing=forcing)"
+    "pcrglob = ewatercycle.models.PCRGlobWB(version=\"setters\", parameter_set=parameter_set, forcing=forcing)\n",
+    "print(pcrglob)"
    ]
   },
   {
@@ -289,10 +302,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running /home/peter/ewatercycle/ewatercycle/ewatercycle-pcrg-grpc4bmi-setters.sif singularity container on port 50639\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "('/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210714_122725/pcrglobwb_ewatercycle.ini',\n",
-       " '/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210714_122725')"
+       "('/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210714_141432/pcrglobwb_ewatercycle.ini',\n",
+       " '/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210714_141432')"
       ]
      },
      "execution_count": 10,
@@ -800,9 +820,9 @@
        "  * latitude   (latitude) float64 46.25 48.75 51.25\n",
        "    time       object 2001-02-28 00:00:00\n",
        "Attributes:\n",
-       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 3</li><li><span class='xr-has-index'>longitude</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-abbdf463-5128-46ba-a95f-afbcacef112f' class='xr-array-in' type='checkbox' checked><label for='section-abbdf463-5128-46ba-a95f-afbcacef112f' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan 74.55 10.39 nan nan 188.1 nan nan</span></div><div class='xr-array-data'><pre>array([[         nan,          nan,          nan,          nan],\n",
+       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 3</li><li><span class='xr-has-index'>longitude</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-54bb84d2-1fbf-461b-92ad-b60472ae25af' class='xr-array-in' type='checkbox' checked><label for='section-54bb84d2-1fbf-461b-92ad-b60472ae25af' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan 74.55 10.39 nan nan 188.1 nan nan</span></div><div class='xr-array-data'><pre>array([[         nan,          nan,          nan,          nan],\n",
        "       [         nan,  74.54685211,  10.38944435,          nan],\n",
-       "       [         nan, 188.07923889,          nan,          nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-4927c88e-5645-4897-9f7f-1a06fb9b3ed1' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4927c88e-5645-4897-9f7f-1a06fb9b3ed1' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 6.25 8.75 11.25</div><input id='attrs-98cac761-cc07-4355-a1ab-b565269fd0e3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-98cac761-cc07-4355-a1ab-b565269fd0e3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c039342d-7bc2-497c-818c-fcf2a7bc0b20' class='xr-var-data-in' type='checkbox'><label for='data-c039342d-7bc2-497c-818c-fcf2a7bc0b20' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  6.25,  8.75, 11.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 48.75 51.25</div><input id='attrs-75562b3e-f361-47b1-9d66-259ae05a59c8' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-75562b3e-f361-47b1-9d66-259ae05a59c8' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-18009de5-7b68-4f93-a1f0-3726c74809ca' class='xr-var-data-in' type='checkbox'><label for='data-18009de5-7b68-4f93-a1f0-3726c74809ca' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 48.75, 51.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2001-02-28 00:00:00</div><input id='attrs-eb245623-5682-4dec-a580-48192cc45644' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-eb245623-5682-4dec-a580-48192cc45644' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-07132ed8-6396-4819-a5be-8c7e17ce1b86' class='xr-var-data-in' type='checkbox'><label for='data-07132ed8-6396-4819-a5be-8c7e17ce1b86' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2001, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7632689b-31d9-46fa-96cf-fb99b240d862' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7632689b-31d9-46fa-96cf-fb99b240d862' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
+       "       [         nan, 188.07923889,          nan,          nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-3641422c-02e7-45e6-8cef-82fcee6279e7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3641422c-02e7-45e6-8cef-82fcee6279e7' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 6.25 8.75 11.25</div><input id='attrs-c325e259-27f3-4b45-a084-b1de369bc3c6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c325e259-27f3-4b45-a084-b1de369bc3c6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3710ddf8-96eb-4887-924e-f71eb0977ed7' class='xr-var-data-in' type='checkbox'><label for='data-3710ddf8-96eb-4887-924e-f71eb0977ed7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  6.25,  8.75, 11.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 48.75 51.25</div><input id='attrs-d3cd529f-8e2e-4401-bb4a-bc931531a7cc' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d3cd529f-8e2e-4401-bb4a-bc931531a7cc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e02bbec9-5e5a-4ca8-a067-960ac64c6671' class='xr-var-data-in' type='checkbox'><label for='data-e02bbec9-5e5a-4ca8-a067-960ac64c6671' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 48.75, 51.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2001-02-28 00:00:00</div><input id='attrs-7089ed31-9f64-49aa-9f38-6f428d2046a8' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7089ed31-9f64-49aa-9f38-6f428d2046a8' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-52614924-717d-447c-840a-bf3169cee7b1' class='xr-var-data-in' type='checkbox'><label for='data-52614924-717d-447c-840a-bf3169cee7b1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2001, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-bd4bb73a-a9e4-424e-b3cf-81e6af17c97a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-bd4bb73a-a9e4-424e-b3cf-81e6af17c97a' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'discharge' (latitude: 3, longitude: 4)>\n",
@@ -844,7 +864,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f631f1c4d60>"
+       "<matplotlib.collections.PathCollection at 0x7f636aa5c4f0>"
       ]
      },
      "execution_count": 16,
