add extra explanations to the notebook as Peter suggested

--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -42,8 +42,9 @@
     "\n",
     "### Generate forcing\n",
     "\n",
-    "Running LISVAP is not implemented yet. Therefore, LISFLOOD forcing data 'e0', 'es0' and 'et0' are not generated.\n",
-    "However, the recipe creates LISVAP input data that can be found in `lisflood_forcing.directory`."
+    "Forcing for LISFLOOD is created using the ESMValTool recipe. It produces one file per each variable: temperature, precipitation, maximum temperature, minimum temperature, u component of wind, v component of wind, surface solar radiation downwards, and dewpoint temperature. Running LISVAP is not implemented yet. Therefore, LISFLOOD forcing data 'e0', 'es0' and 'et0' are not generated.\n",
+    "However, the recipe creates LISVAP input data that can be found in `lisflood_forcing.directory`.\n",
+    "You can set the start and end date, and the region. See [eWaterCycle documentation](https://ewatercycle.readthedocs.io/en/latest/apidocs/ewatercycle.forcing.html#submodules) for more information. "
    ]
   },
   {
@@ -166,7 +167,9 @@
    "source": [
     "## Wflow\n",
     "\n",
-    "### Generate forcing"
+    "### Generate forcing\n",
+    "\n",
+    "Forcing for Wflow is created using the ESMValTool recipe. It produces one file that contains three variables: temperature, precipitation, and potential evapotranspiration. You can set the start and end date, and the region. See [eWaterCycle documentation](https://ewatercycle.readthedocs.io/en/latest/apidocs/ewatercycle.forcing.html#submodules) for more information. "
    ]
   },
   {
@@ -337,7 +340,9 @@
    "source": [
     "## PCRGlobWB\n",
     "\n",
-    "### Generate forcing"
+    "### Generate forcing\n",
+    "\n",
+    "Forcing for PCRGlobWB is created using the ESMValTool recipe. It produces one file per each variable: temperature, and precipitation. You can set the start and end date, and the region. See [eWaterCycle documentation](https://ewatercycle.readthedocs.io/en/latest/apidocs/ewatercycle.forcing.html#submodules) for more information. "
    ]
   },
   {
